# Pare-agent

./: .gitignore  OPEN_QUESTIONS.md  README.md  plan.md  pyproject.toml  temp.md  test_bash2.py  test_bash_tool.py  test_headless.py  test_llm_request.py  test_parser.py
.claude/: settings.local.json
.forge/: session_1775483476.jsonl
docs/: annotation_protocol.md  dataset_card.md
experiments/: __init__.py  classify_trajectories.py  export_sft_dataset.py  generate_trajectories.py  materialize_swe_bench_workdirs.py  plot_ablation.py  prepare_swe_bench_verified.py  run_failure_injection.py  run_sft_training.py
forge/: __init__.py  main.py
forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
forge/agent/: __init__.py  executor.py  guardrails.py  orchestrator.py
forge/cli/: __init__.py  app.py  commands.py  renderer.py
forge/llm/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  token_counter.py
forge/sandbox/: __init__.py  git_checkpoint.py
forge/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  search.py
pare/: __init__.py  main.py  telemetry.py
pare/agent/: __init__.py  diff_verify.py  executor.py  guardrails.py  loop.py  orchestrator.py  orient.py  orient_v2.py  planner.py  planner_v2.py  strategy.py  verify.py
pare/cli/: __init__.py  app.py  commands.py  headless.py  renderer.py  themes.py
pare/context/: __init__.py  compactor.py  history.py  manager.py  memory.py
pare/curation/: __init__.py  sampler.py
pare/defender/: __init__.py  git_exploitation_defender.py
pare/eval/: __init__.py  failure_injection.py
pare/export/: __init__.py  sft_exporter.py
pare/inspector/: __init__.py  annotator.py  cli.py  differ.py  html_renderer.py  loader.py  semantic_tags.py
pare/inspector/templates/: report.css  report.html.j2
pare/llm/: __init__.py  anthropic_adapter.py  base.py  openai_adapter.py  output_parser.py  retry.py  token_counter.py
pare/sandbox/: docker_eval.py  ghost.py  git_checkpoint.py  image_builder.py  instance_container.py  probe.py
pare/telemetry_langfuse/: __init__.py  agent_status.py  config.py  emitter.py  loader.py
pare/tools/: __init__.py  base.py  bash.py  declare_done.py  eureka.py  eureka_tool.py  file_edit.py  file_read.py  search.py
pare/trajectory/: __init__.py  classifier.py  classifier_liu.py  error_signal_extractor.py  recovery_detector.py  recovery_detector_v2.py  schema.py  schema_v2.py  sft_export.py
scripts/: gen_minimal_fixture.py  migrate_v0_sft_metadata.py  pilot_docker_eval.py  smoke_container.py  spike_container.py
tests/inspector/: test_annotator.py  test_cli.py  test_differ.py  test_loader.py
tests/inspector/fixtures/: .gitkeep  minimal.jsonl
tests/telemetry_langfuse/: test_emitter.py
tests/test_agent/: test_executor.py  test_guardrails.py  test_loop.py  test_orchestrator.py  test_orient.py  test_orient_v2.py  test_planner.py  test_planner_v2.py  test_verify.py
tests/test_cli/: test_commands.py  test_headless.py  test_headless_docker_tier2.py  test_main.py  test_renderer.py
tests/test_context/: test_compactor.py  test_history.py  test_manager.py  test_memory.py
tests/test_curation/: __init__.py  test_sampler.py
tests/test_defender/: __init__.py  test_git_exploitation_defender.py
tests/test_eval/: test_failure_injection.py
tests/test_experiments/: __init__.py  test_classify_trajectories.py  test_export_sft_dataset.py  test_generate_trajectories.py  test_materialize_swe_bench_workdirs.py  test_plot_ablation.py  test_prepare_swe_bench_verified.py  test_run_failure_injection.py  test_run_sft_training.py
tests/test_export/: test_sft_exporter.py
tests/test_llm/: test_base.py  test_openai_adapter.py  test_output_parser.py  test_retry.py  test_telemetry.py
tests/test_sandbox/: test_docker_eval.py  test_git_checkpoint.py  test_instance_container.py  test_run_tier2_in_container.py
tests/test_scripts/: test_migrate_v0_sft_metadata.py
tests/test_tools/: test_bash.py  test_container_mode.py  test_declare_done.py  test_file_edit_lint.py  test_file_ops.py  test_registry.py  test_search.py  test_validate_path.py
tests/test_trajectory/: __init__.py  test_classifier.py  test_classifier_liu.py  test_error_signal_extractor.py  test_recovery_detector.py  test_recovery_detector_v2.py  test_schema.py  test_schema_v2.py  test_schema_v2_compat.py  test_sft_export.py
tests/trajectory/: test_classifier_liu.py  test_schema_v2.py
