[project]
name = "pare"
version = "0.1.0"
description = "The coding agent that never breaks your repo"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # LLM SDK
    "openai>=1.50.0",

    # Async
    "anyio>=4.0",

    # Token counting (OpenAI models)
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]
docker-eval = [
    "swebench==3.0.15",
    "docker>=7.0,<8",
    "datasets>=2.19",
]

[project.scripts]
pare = "pare.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # v1 trajectory modules are intentionally deprecated (Phase 2.6);
    # tests still exercise them as a regression harness. Match by
    # warning message since pytest's module filter uses the module
    # that called warn(), not the source module path.
    "ignore:pare.trajectory.classifier is deprecated:DeprecationWarning",
    "ignore:pare.trajectory.recovery_detector is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
