[project]
name = "pare"
version = "0.1.0"
description = "The coding agent that never breaks your repo"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # LLM SDK
    "openai>=1.50.0",

    # Async
    "anyio>=4.0",

    # Token counting (OpenAI models)
    "tiktoken>=0.7.0",

    # Tolerant JSON parsing for LLM outputs — used as a last-resort stage
    # by pare/llm/output_parser.py when models emit prose-wrapped or
    # truncated JSON (common with Minimax / DeepSeek / Qwen).
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    # Pin pytest<9: pytest 9.x raises PytestRemovedIn9Warning for async fixtures
    # without an explicit loop-scope policy, which breaks pytest-asyncio<0.25.
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]
docker-eval = [
    "swebench==3.0.15",
    "docker>=7.0,<8",
    "datasets>=2.19",
]

[project.scripts]
pare = "pare.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Explicit loop-scope policy silences PytestRemovedIn9Warning under
# pytest-asyncio 0.24+ so the suite runs clean on Linux where CI picks
# up a newer pytest than Windows dev boxes.
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    # v1 trajectory modules are intentionally deprecated (Phase 2.6);
    # tests still exercise them as a regression harness. Match by
    # warning message since pytest's module filter uses the module
    # that called warn(), not the source module path.
    "ignore:pare.trajectory.classifier is deprecated:DeprecationWarning",
    "ignore:pare.trajectory.recovery_detector is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
