[project]
name = "pare"
version = "0.2.0"
description = "Opinionated observability + CI layer for coding agents, on top of Langfuse"
requires-python = ">=3.12"
license = "MIT"

# Pare 2.0 is observer-only: a Trajectory Inspector CLI that consumes
# JSONL agent traces, classifies failures, and renders side-by-side HTML
# diff reports. Runtime primitives (loop, container, classifiers) live in
# the research repo (pare-research). This package depends on it as a lib.
dependencies = [
    # HTML report rendering
    "jinja2>=3.1",
    # Terminal output for the CLI driver
    "rich>=13.0",
    # CLI argument parsing
    "click>=8.1",
]

[project.optional-dependencies]
# Research primitives (schema_v2, classifier_liu, recovery_detector_v2,
# error_signal_extractor) — installed from the research branch as a lib.
# Pinned to a branch ref until research lands on main.
research = [
    "pare-research @ git+https://github.com/czhang076/Pare-agent.git@claude/great-carson-333acd",
]

# W3 Langfuse emitter + W4 Agent Graph integration.
langfuse = [
    "langfuse>=2.0",
    "httpx>=0.27",
]

# Post-MVP Eval-Gated CI webhook server.
ci = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
pare = "pare.inspector.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pare*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
